--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil:
   google_fonts:
+  http:
+  get:
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
